--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero ut facilis
              aliquam accusantium odit, molestias labore quis doloremque saepe optio 
              atque perspiciatis odio.</p>
+        <p>this is line made in my laptop xd</p>
     </section>
     <section>
         <li>Start</li>
